<resources>
    <string name="app_name">News App Demo</string>

    <string name="toolbar_title">Tum Haberler</string>
    <string name="news_title">Haber Basligi</string>
    <string name="toolbar_details_title">Haber Detayı</string>
    <string name="news_summary">Haber Ozeti</string>
    <string name="news_description">Haber Aciklamasi</string>
    <string name="news_image_description">Haber Resim</string>


</resources>